--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "three-stlexporter":"1.0.0",
     "vblob":"1.1.0",
     "three-gltf-exporter":"0.0.1",
-    "prismarine-nbt":"2.7.0"
+    "prismarine-nbt":"2.7.0",
+    "prismarine-registry":"1.11.0"
   },
   "devDependencies": {},
   "engines": {
