--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.17.1",
     "ejs": "^3.1.6",
     "prismarine-viewer": "1.33.0",
+    "prismarine-chunk": "1.38.1",
+    "prismarine-entity": "2.5.0",
     "multer": "1.4.5-lts.2",
     "uuid": "^9.0.0",
     "node-canvas-webgl": "0.3.0",
