Render Function Completed

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "vblob":"1.1.0",
     "three-gltf-exporter":"0.0.1",
     "prismarine-nbt":"2.7.0",
-    "prismarine-registry":"1.11.0"
+    "prismarine-registry":"1.11.0",
+    "deepslate":"0.23.6"
   },
   "devDependencies": {},
   "engines": {
