--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "prismarine-nbt":"2.7.0",
     "prismarine-registry":"1.11.0",
     "deepslate":"0.23.6",
-    "express-async-handler":"1.2.0"
+    "express-async-handler":"1.2.0",
+    "prismarine-item":"1.16.0",
+    "minecraft-data":"3.85.0"
   },
   "devDependencies": {},
   "engines": {
