--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "deepslate":"0.23.6",
     "express-async-handler":"1.2.0",
     "prismarine-item":"1.16.0",
-    "minecraft-data":"3.85.0"
+    "minecraft-data":"3.85.0",
+    "fast-csv":"5.0.2"
   },
   "devDependencies": {},
   "engines": {
